--- a/UpTodo/package.json
+++ b/UpTodo/package.json
@@ -9,13 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "^4.10.5"
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-gifted-charts": "^1.4.41",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
