--- a/UpTodo/package.json
+++ b/UpTodo/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@logisticinfotech/react-native-horizontal-date-picker": "^1.0.16",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^20.5.0",
@@ -22,8 +23,10 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
+    "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1307.0",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -35,6 +38,7 @@
     "react-native-paper-dropdown": "^2.3.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.10.5",
+    "react-native-svg": "^15.7.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
